# ghagg

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/commit/: SKILL.md
docs/: environment.md  intent.md  spec.md
docs/plans/: 2026-03-20-fetch-pr-data.md
plans/: greedy-tickling-rossum.md  noble-hugging-teapot.md
src/ghagg/: aggregator.py  cli.py  fetcher.py  github_client.py  queries.py  storage.py
