[project]
name = "ghagg"
version = "0.1.0"
description = "GitHub PR data aggregation tool"
authors = [
    { name = "Mitsuhito Fujita", email = "github@mitsuhito.dev" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ghagg = "ghagg.cli:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
